# databass

./: Dockerfile  pyproject.toml
.github/workflows/: test.yml
migrate/: instructions.md  migrate-0.6-to-0.7.py
src/: .coverage
src/databass/: __init__.py  classes.py  routes.py
src/databass/api/: discogs.py  musicbrainz.py  util.py
src/databass/artists/: routes.py
src/databass/db/: models.py  operations.py  util.py
src/databass/db_neo4j/: __init__.py  insert.py  models.py
src/databass/labels/: routes.py
src/databass/releases/: routes.py
src/databass/releases/templates/: release.html
src/databass/static/src/js/: main.js
src/databass/static/src/less/: style.less
src/databass/templates/: home_release_table.html  home_stats.html  search.html
src/tests/: test_routes.py
src/tests/api/: test_api_util.py  test_discogs.py  test_musicbrainz.py
src/tests/artists/: test_artists_routes.py
src/tests/db/: test_models.py  test_operations.py
src/tests/labels/: test_labels_routes.py
src/tests/releases/: test_releases_routes.py
